--- a/src/scss/frontend/_common.scss
+++ b/src/scss/frontend/_common.scss
@@ -10,7 +10,7 @@
 //
 // Markup:
 // <div class="container">
-//   <!-- Container content -->
+//   Container content
 // </div>
 //
 // Style guide: frontend.common.container
